--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://vedantthebilions.github.io/chat-bot-react",
   "dependencies": {
     "@progress/kendo-react-pdf": "^5.11.0",
+    "@react-pdf/renderer": "^3.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
